[gd_scene load_steps=9 format=2]

[ext_resource path="res://fonts/mononoki-Bold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://tools/fods/FODS.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
outline_color = Color( 0.270588, 0.270588, 0.270588, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 96
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 96
font_data = ExtResource( 1 )

[node name="FODS" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="FODSBanner" type="ColorRect" parent="."]
anchor_bottom = 0.212
margin_left = 40.0
margin_top = 105.0
margin_right = 1040.0
margin_bottom = 201.52
color = Color( 0.368627, 0, 0, 1 )

[node name="LabelFODS" type="Label" parent="FODSBanner"]
anchor_top = 0.0142232
anchor_bottom = 0.0142232
margin_right = 1000.0
margin_bottom = 109.0
custom_fonts/font = SubResource( 1 )
text = "RF'S EVENT ORACLE"
align = 1
valign = 1

[node name="LabelFODS2" type="RichTextLabel" parent="FODSBanner"]
anchor_top = 0.0142232
anchor_bottom = 0.0142232
margin_top = 106.492
margin_right = 1000.0
margin_bottom = 166.492
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center][color=#696969]Frumpkin's Events for D Six "
text = "Frumpkin's Events for D Six "
scroll_active = false

[node name="LabelAction" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 40.0
margin_top = 390.0
margin_right = 1000.0
margin_bottom = 494.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][color=#494949]ACTION"
text = "ACTION"
scroll_active = false

[node name="LabelActionResult" type="Label" parent="."]
anchor_right = 1.0
margin_left = 40.0
margin_top = 530.0
margin_right = 1000.0
margin_bottom = 639.0
custom_fonts/font = SubResource( 4 )
text = "understand"
align = 1
valign = 1

[node name="LabelDescriptor" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 40.0
margin_top = 840.508
margin_right = 1000.0
margin_bottom = 949.508
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][color=#494949]DESCRIPTOR"
text = "DESCRIPTOR"
scroll_active = false

[node name="LabelDescriptorResult" type="Label" parent="."]
anchor_right = 1.0
margin_left = 40.0
margin_top = 981.0
margin_right = 1000.0
margin_bottom = 1090.0
custom_fonts/font = SubResource( 5 )
text = "condemned"
align = 1
valign = 1

[node name="LabelSubject" type="RichTextLabel" parent="."]
anchor_right = 1.0
margin_left = 40.0
margin_top = 1292.0
margin_right = 1000.0
margin_bottom = 1401.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[center][color=#494949]SUBJECT"
text = "SUBJECT"
scroll_active = false

[node name="LabelSubjectResult" type="Label" parent="."]
anchor_right = 1.0
margin_left = 40.0
margin_top = 1430.0
margin_right = 1000.0
margin_bottom = 1539.0
custom_fonts/font = SubResource( 3 )
text = "knowledge"
align = 1
valign = 1

[node name="ButtonRoll" type="Button" parent="."]
margin_left = 40.0
margin_top = 1748.0
margin_right = 1040.0
margin_bottom = 1908.0
custom_fonts/font = SubResource( 6 )
text = "R O L L"

[connection signal="pressed" from="ButtonRoll" to="." method="_on_ButtonRoll_pressed"]
